--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
 <html lang="en">
     <head>
-        <title>
-            Jovian-Careers
-        </title>
+        <title>Jovian Careers</title>
+    <link rel="icon" href="/jovian_favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="styles.css">
         <body>
             <div id="navbar">
